--- a/packages/client/src/style.scss
+++ b/packages/client/src/style.scss
@@ -533,7 +533,7 @@ hr {
 			left: 0;
 			bottom: 0;
 			z-index: -1;
-			background: var(--bg);
+			background: var(--acrylicBg);
 			opacity: 0.75;
 		}
 	}
