remove ascii art in page comment

--- a/packages/backend/src/server/web/views/base.pug
+++ b/packages/backend/src/server/web/views/base.pug
@@ -6,18 +6,12 @@ block loadClientEntry
 doctype html
 
 //
-	-
-	 ▄▄▄▄▄▄▄ ▄▄▄ ▄▄▄▄▄▄   ▄▄▄▄▄▄▄ ▄▄▄▄▄▄▄ ▄▄▄ ▄▄▄▄▄▄▄ ▄▄   ▄▄    ◯
-	█       █   █   ▄  █ █       █       █   █       █  █ █  █      ○   ▄    ▄
-	█    ▄▄▄█   █  █ █ █ █    ▄▄▄█    ▄▄▄█   █  ▄▄▄▄▄█  █▄█  █    ⚬     █▄▄  █▄▄
-	█   █▄▄▄█   █   █▄▄█▄█   █▄▄▄█   █▄▄▄█   █ █▄▄▄▄▄█       █      ▄▄▄▄▄▄   ▄
-	█    ▄▄▄█   █    ▄▄  █    ▄▄▄█    ▄▄▄█   █▄▄▄▄▄  █   ▄   █     █      █  █▄▄
-	█   █   █   █   █  █ █   █▄▄▄█   █   █   █▄▄▄▄▄█ █  █ █  █     █ ● ●  █
-	█▄▄▄█   █▄▄▄█▄▄▄█  █▄█▄▄▄▄▄▄▄█▄▄▄█   █▄▄▄█▄▄▄▄▄▄▄█▄▄█ █▄▄█     ▀▄▄▄▄▄▄▀
+	Thank you for using Goblin!
 
-		Thank you for using Firefish!
-		If you are reading this message... how about joining the development?
-		https://git.joinfirefish.org/firefish/firefish
+	If you're reading this message, you might be the kind of person who would
+	really like to look at this page: 
+
+		https://github.com/johnHackworth/goblin.git
 
 html
 
